--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-3.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonThree">Niewolnicy Przyjemności</a></h3>
+									<h3 class="news-title"><a href="sermons.html#sermonSix">Niewolnicy Przyjemności</a></h3>
 									<small class="date"><i class="fa fa-calendar"></i>22 paź <span class="year-2"></span></small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-4.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonFour">KONIEC NADSZEDŁ!</a></h3>
+									<h3 class="news-title"><a href="sermons.html#sermonSeven">KONIEC ŚWIATA NADSZEDŁ!</a></h3>
 									<small class="date"><i class="fa fa-calendar"></i>6 kwie <span class="year-3"></span></small>
 								</div>
 							</div>
