--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                                 <div class="news">
                                     <p>Jesteśmy małym, fundamentalistycznym Kościołem, oddanym całkowicie woli Boga i jego herolda, Anioła Paschy. Nie należymy do żadnej określnej denominacji, ponieważ naszym bezpośrednim zwierzchnikiem jest sam Pan. Obwołujemy wolność od używek i przywiązań tego świata.
 
-<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świa poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
+<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Czas Przejścia jest bliski. Wkrótce Bóg powróci na świat poprzez swojego paschalnego posłańca, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
 
 <br>Wiele kościołów powie ci, że Powtórne Przyjście zostało przepowiedziane przez św. Jana w Księdze Apokalipsy, ale są w błędzie. Tylko ci, którzy podążają za prawdziwymi Słowami Anioła Bożego, zostaną odkupieni. Wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
 
