--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-        <title>Church of the Passover Angel</title>
+        <title>Kościół Anioła Paschalnego</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 
@@ -93,7 +93,7 @@
                         <div class="col-md-4">
                             <div class="widget">
                                 <h3 class="widget-title">Nasz Adres</h3>
-                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA<br> -Tomasz z Akwinu</p>
                                 <ul class="address">
                                     <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
                                     <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
