--- a/book.html
+++ b/book.html
@@ -82,13 +82,14 @@
                             </div>
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
+                                    <br><br>
                                     <p>Przekaż darowiznę na rzecz naszego Kościoła poniżej, a my wyślemy Ci tę piękną książkę, przedstawiającą prawdę w Piśmie Świętym, objawioną naszemu wielebnemu o. Balforowi przez Anioła Bożego.</p>
                                     <p>Jest to niewielka cena za zbawienie, w porównaniu z ceną nieśmiertelnej duszy.</p>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    <strong>Donate $29.95 or more now</strong><br>
+                                    <strong>Złóż datek w niewielkiej kwocie 40,99zł</strong><br>
                                     <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
                                 </div>
                             </div>
@@ -103,7 +104,7 @@
                         <div class="col-md-4">
                             <div class="widget">
                                 <h3 class="widget-title">Nasz Adres</h3>
-                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA<br> -Tomasz z Akwinu</p>
                                 <ul class="address">
                                     <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
                                     <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
