--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			od człowieka aż do bydła i odbędę sąd nad wszystkimi bogami Egiptu<br>
 			    <strong>Ja</strong>, Pan.
                     </p>
-                    <h3 class="text-center">To czas ostateczny!</h3>
-			<h3></h3>Porzuć przyjemności doczesne i pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
+                    <h2 class="text-center">Czas Przejścia jest bliski!</h2>
+			<h3>Porzuć przyjemności doczesne i pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
                 </div>
             </div>
 
