--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			od człowieka aż do bydła i odbędę sąd nad wszystkimi bogami Egiptu<br>
 			    <strong>Ja</strong>, Pan.
                     </p>
-                    <h2 class="text-center">Czas Przejścia jest bliski!</h2>
-			<h3>Porzuć przyjemności doczesne i pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
+                    <h3 class="text-center">Czas Przejścia jest bliski!</h3>
+			<p class="text-center">Porzuć przyjemności doczesne i pojednaj się z Panem, bo on jest sprawiedliwy!</p>
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
                         <div class="col-md-4">
                             <div class="widget">
                                 <h3 class="widget-title">Nasz Adres</h3>
-                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA<br> -Tomasz z Akwinu</p>
                                 <ul class="address">
                                     <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
                                     <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
